--- a/.github/workflows/update-contributions.yml
+++ b/.github/workflows/update-contributions.yml
@@ -2,8 +2,8 @@ name: Actualizar README con contribuciones
 
 on:
   schedule:
-    - cron: '0 0 * * *' # Ejecuta una vez al día a la medianoche
-  workflow_dispatch: # Permite ejecución manual desde Actions
+    - cron: '0 0 * * *' # Ejecuta una vez al día
+  workflow_dispatch: # Permite ejecución manual
 
 jobs:
   actualizar-readme:
@@ -16,50 +16,49 @@ jobs:
       - name: Configurar Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: '16'
+          node-version: '18'  # Cambia a Node.js 18
 
       - name: Obtener últimas contribuciones
         run: |
-          # Instalar octokit para interactuar con la API de GitHub
-          npm install @octokit/core
-          
-          # Crear script para obtener las contribuciones recientes
+          # Usar import dinámico para el módulo ECMAScript
           node << 'EOF'
-          const { Octokit } = require("@octokit/core");
-          const fs = require('fs');
+          (async () => {
+            const { Octokit } = await import('@octokit/core');
+            const fs = require('fs');
 
-          const usuario = 'srnovus';
-          const repositorio = 'fedired';
-          const octokit = new Octokit();
+            const usuario = 'srnovus';
+            const repositorio = 'fedired';
+            const octokit = new Octokit();
 
-          async function obtenerContribuciones() {
-              const respuesta = await octokit.request('GET /repos/{owner}/{repo}/commits', {
-                  owner: 'fedired-dev',
-                  repo: repositorio,
-                  per_page: 5
-              });
+            async function obtenerContribuciones() {
+                const respuesta = await octokit.request('GET /repos/{owner}/{repo}/commits', {
+                    owner: 'fedired-dev',
+                    repo: repositorio,
+                    per_page: 5
+                });
 
-              const contribuciones = respuesta.data.map(commit => {
-                  return `- [${commit.commit.message}](${commit.html_url}) (${commit.commit.author.date.split('T')[0]})`;
-              }).join('\n');
+                const contribuciones = respuesta.data.map(commit => {
+                    return `- [${commit.commit.message}](${commit.html_url}) (${commit.commit.author.date.split('T')[0]})`;
+                }).join('\n');
 
-              return contribuciones;
-          }
+                return contribuciones;
+            }
 
-          async function actualizarReadme() {
-              const contribuciones = await obtenerContribuciones();
-              const rutaReadme = './README.md';
-              const contenidoReadme = fs.readFileSync(rutaReadme, 'utf8');
+            async function actualizarReadme() {
+                const contribuciones = await obtenerContribuciones();
+                const rutaReadme = './README.md';
+                const contenidoReadme = fs.readFileSync(rutaReadme, 'utf8');
 
-              const nuevoContenido = contenidoReadme.replace(
-                  /<!--INICIO_SECCION:contribuciones-->[\s\S]*<!--FIN_SECCION:contribuciones-->/,
-                  `<!--INICIO_SECCION:contribuciones-->\n${contribuciones}\n<!--FIN_SECCION:contribuciones-->`
-              );
+                const nuevoContenido = contenidoReadme.replace(
+                    /<!--INICIO_SECCION:contribuciones-->[\s\S]*<!--FIN_SECCION:contribuciones-->/,
+                    `<!--INICIO_SECCION:contribuciones-->\n${contribuciones}\n<!--FIN_SECCION:contribuciones-->`
+                );
 
-              fs.writeFileSync(rutaReadme, nuevoContenido);
-          }
+                fs.writeFileSync(rutaReadme, nuevoContenido);
+            }
 
-          actualizarReadme();
+            await actualizarReadme();
+          })();
           EOF
 
       - name: Hacer commit y push de los cambios
